[gd_scene load_steps=63 format=2]

[ext_resource path="res://Imagens/fundo_agua_desafio2.png" type="Texture" id=1]
[ext_resource path="res://personagemoficial.tscn" type="PackedScene" id=2]
[ext_resource path="res://Imagens/quadrado_agua.png" type="Texture" id=3]
[ext_resource path="res://console/base_console.png" type="Texture" id=4]
[ext_resource path="res://console/botão_pausar.png" type="Texture" id=5]
[ext_resource path="res://pausar.tscn" type="PackedScene" id=6]
[ext_resource path="res://console/seta_grande1-removebg-preview (1).png" type="Texture" id=7]
[ext_resource path="res://HUD/giro esquerda.png" type="Texture" id=8]
[ext_resource path="res://console/botão_playNOVO.png" type="Texture" id=9]
[ext_resource path="res://console/espaço_seta.png" type="Texture" id=10]
[ext_resource path="res://Imagens/jangada_lado.png" type="Texture" id=11]
[ext_resource path="res://pescador.gd" type="Script" id=12]
[ext_resource path="res://Imagens/chaoagua.png" type="Texture" id=13]
[ext_resource path="res://personagem 2/jangadaladodireito.png" type="Texture" id=14]
[ext_resource path="res://personagem 2/jangada frente.png" type="Texture" id=15]
[ext_resource path="res://itensdodesafio/corais - cópia 3.png" type="Texture" id=16]
[ext_resource path="res://fonte/Ningst Only Peace Font by 7Ntypes.otf" type="DynamicFontData" id=17]
[ext_resource path="res://itens/SalGemaMov.png" type="Texture" id=18]
[ext_resource path="res://itensdodesafio/salGema.png" type="Texture" id=19]
[ext_resource path="res://desafio2.gd" type="Script" id=20]
[ext_resource path="res://itens/rocha.png.png" type="Texture" id=21]
[ext_resource path="res://676401__cjspellsfish__score-1.mp3" type="AudioStream" id=22]
[ext_resource path="res://music/cena1_YU4ySoz2.ogg" type="AudioStream" id=23]
[ext_resource path="res://personagem 2/jangadaesquerda.png" type="Texture" id=24]
[ext_resource path="res://personagem 2/jangada costas.png" type="Texture" id=25]
[ext_resource path="res://HUD/giro direita.png" type="Texture" id=26]

[sub_resource type="TileSet" id=1]
0/name = "quadrado_agua.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 20, 20 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "chaoagua.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=87]
extents = Vector2( 37.5079, 32.3789 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 40, 45 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 18 )
region = Rect2( 40, 0, 40, 45 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 18 )
region = Rect2( 80, 0, 40, 45 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 18 )
region = Rect2( 120, 0, 40, 45 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 18 )
region = Rect2( 160, 0, 40, 45 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 18 )
region = Rect2( 200, 0, 40, 45 )

[sub_resource type="SpriteFrames" id=82]
animations = [ {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "SalGema",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=83]
extents = Vector2( 9.74992, 10.5952 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 19 )
region = Rect2( 80, 0, 40, 200 )

[sub_resource type="SpriteFrames" id=85]
animations = [ {
"frames": [ SubResource( 84 ) ],
"loop": true,
"name": "SalGema",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=86]
size = 24
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=88]
extents = Vector2( 137.999, 2 )

[sub_resource type="RectangleShape2D" id=89]
extents = Vector2( 137.248, 1.43556 )

[sub_resource type="RectangleShape2D" id=90]
extents = Vector2( 10, 9.5005 )

[sub_resource type="RectangleShape2D" id=91]
extents = Vector2( 2.85875, 170.001 )

[sub_resource type="RectangleShape2D" id=92]
extents = Vector2( 2.92227, 73.0031 )

[sub_resource type="RectangleShape2D" id=93]
extents = Vector2( 19.0011, 4.99735 )

[sub_resource type="RectangleShape2D" id=94]
extents = Vector2( 3.45474, 84.0016 )

[sub_resource type="RectangleShape2D" id=95]
extents = Vector2( 37.4989, 3.51466 )

[sub_resource type="RectangleShape2D" id=96]
extents = Vector2( 5.49257, 17.5021 )

[sub_resource type="RectangleShape2D" id=97]
extents = Vector2( 285.999, 2.03456 )

[sub_resource type="RectangleShape2D" id=98]
extents = Vector2( 205.997, 4.50002 )

[sub_resource type="RectangleShape2D" id=99]
extents = Vector2( 5.98245, 65.5009 )

[sub_resource type="RectangleShape2D" id=100]
extents = Vector2( 4.77226, 51.3721 )

[sub_resource type="RectangleShape2D" id=101]
extents = Vector2( 6.01616, 102.888 )

[sub_resource type="RectangleShape2D" id=102]
extents = Vector2( 5.50009, 81.5508 )

[sub_resource type="RectangleShape2D" id=103]
extents = Vector2( 189.121, 5 )

[sub_resource type="RectangleShape2D" id=104]
extents = Vector2( 137.945, 4.00158 )

[sub_resource type="RectangleShape2D" id=105]
extents = Vector2( 3.63346, 115.481 )

[sub_resource type="RectangleShape2D" id=106]
extents = Vector2( 166.133, 1.95658 )

[sub_resource type="RectangleShape2D" id=107]
extents = Vector2( 139.506, 4.42118 )

[sub_resource type="RectangleShape2D" id=108]
extents = Vector2( 3.94322, 85.5066 )

[sub_resource type="RectangleShape2D" id=109]
extents = Vector2( 162.993, 3 )

[sub_resource type="RectangleShape2D" id=110]
extents = Vector2( 164.498, 3.00105 )

[node name="desafio2" type="Node2D"]
rotation = -0.00106497
script = ExtResource( 20 )

[node name="FundoAguaDesafio2" type="Sprite" parent="."]
modulate = Color( 0, 0.929412, 1, 1 )
position = Vector2( 518.598, 377.552 )
scale = Vector2( 5.2, 5.2 )
texture = ExtResource( 1 )

[node name="BaseConsole" type="Sprite" parent="."]
position = Vector2( 504, 358 )
scale = Vector2( 5.505, 2.82 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.5218
margin_top = 489.978
margin_right = 404.478
margin_bottom = 630.978
color = Color( 0.356863, 0.203922, 0.054902, 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 598.454, 512.638 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 64
format = 1
tile_data = PoolIntArray( -1966102, 1, 0, -1966094, 1, 0, -1966090, 1, 0, -1966086, 1, 0, -1966082, 1, 0, -2031614, 1, 0, -2031610, 1, 0, -1703958, 1, 0, -1703950, 1, 0, -1769466, 1, 0, -1441830, 1, 0, -1441826, 1, 0, -1441822, 1, 0, -1441818, 1, 0, -1441814, 1, 0, -1441806, 1, 0, -1507322, 1, 0, -1179670, 1, 0, -1179662, 1, 0, -1179658, 1, 0, -1179654, 1, 0, -1179650, 1, 0, -1245182, 1, 0, -1245178, 1, 0, -1245174, 1, 0, -1245170, 1, 0, -1245166, 1, 0, -1245162, 1, 0, -1245158, 1, 0, -917526, 1, 0, -983034, 1, 0, -655386, 1, 0, -655382, 1, 0, -655378, 1, 0, -655374, 1, 0, -655370, 1, 0, -655366, 1, 0, -655362, 1, 0, -720894, 1, 0, -720890, 1, 0 )

[node name="personagemoficial" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -448, -35 )

[node name="BotãoPausar" type="TouchScreenButton" parent="."]
position = Vector2( 947, 22 )
scale = Vector2( 2.5, 2.5 )
normal = ExtResource( 5 )
action = "Pause"

[node name="pausar" parent="." instance=ExtResource( 6 )]
visible = false
z_index = 15

[node name="touchAvancar" type="TouchScreenButton" parent="."]
position = Vector2( 100.378, 584.107 )
rotation = 3.14159
scale = Vector2( 3, 3 )
normal = ExtResource( 7 )

[node name="touchDireita" type="TouchScreenButton" parent="."]
position = Vector2( 251.454, 513.268 )
rotation = 6.29835
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 26 )

[node name="touchIniciar" type="TouchScreenButton" parent="."]
position = Vector2( 456.446, 520.486 )
scale = Vector2( 3, 3 )
normal = ExtResource( 9 )

[node name="EspaçoSeta" type="Sprite" parent="."]
position = Vector2( 687.295, 662.732 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta10" type="Sprite" parent="."]
position = Vector2( 597.292, 664.636 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta2" type="Sprite" parent="."]
position = Vector2( 686.351, 609.731 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta9" type="Sprite" parent="."]
position = Vector2( 597.35, 610.637 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta3" type="Sprite" parent="."]
position = Vector2( 781.349, 611.832 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta4" type="Sprite" parent="."]
position = Vector2( 782.296, 661.833 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta5" type="Sprite" parent="."]
position = Vector2( 875.35, 610.933 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta6" type="Sprite" parent="."]
position = Vector2( 876.295, 662.934 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta7" type="Sprite" parent="."]
position = Vector2( 960.35, 611.023 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EspaçoSeta8" type="Sprite" parent="."]
position = Vector2( 960.293, 664.023 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="bonecoteste" type="KinematicBody2D" parent="."]
position = Vector2( 86.8328, 157.093 )
scale = Vector2( 0.2, 0.2 )
z_index = 10
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bonecoteste"]
position = Vector2( -7.65726, 117.613 )
shape = SubResource( 87 )

[node name="descendo" type="Sprite" parent="bonecoteste"]
visible = false
position = Vector2( 4.40237, 85.2436 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )

[node name="JangadaCostas" type="Sprite" parent="bonecoteste"]
visible = false
position = Vector2( 8.90549, 80.9861 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 25 )

[node name="Jangadaesquerda" type="Sprite" parent="bonecoteste"]
visible = false
position = Vector2( 22.4626, 25.5934 )
scale = Vector2( 2, 2 )
texture = ExtResource( 24 )

[node name="Jangadaladodireito" type="Sprite" parent="bonecoteste"]
position = Vector2( -36.0151, 25.5344 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="RayCast2D" type="RayCast2D" parent="bonecoteste"]
cast_to = Vector2( 0, 1 )

[node name="espaco1" type="Sprite" parent="."]
position = Vector2( 604.329, 518.596 )
scale = Vector2( 0.3, 0.3 )

[node name="espaco2" type="Sprite" parent="."]
position = Vector2( 699.447, 519.745 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco3" type="Sprite" parent="."]
position = Vector2( 796.446, 520.849 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco4" type="Sprite" parent="."]
position = Vector2( 885.453, 519.906 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco5" type="Sprite" parent="."]
position = Vector2( 969.447, 520.034 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco6" type="Sprite" parent="."]
position = Vector2( 607.39, 573.646 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco7" type="Sprite" parent="."]
position = Vector2( 696.389, 573.742 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco8" type="Sprite" parent="."]
position = Vector2( 795.375, 572.841 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco9" type="Sprite" parent="."]
position = Vector2( 887.399, 573.96 )
scale = Vector2( 1.4, 1.4 )

[node name="espaco10" type="Sprite" parent="."]
position = Vector2( 976.393, 572.041 )
scale = Vector2( 1.4, 1.4 )

[node name="Corais-Cópia3" type="Sprite" parent="."]
position = Vector2( 301.633, 344.321 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 16 )

[node name="JangadaLado3" type="Sprite" parent="."]
position = Vector2( 898.593, 382.956 )
scale = Vector2( 3.03975, 2.83665 )
texture = ExtResource( 11 )
flip_h = true

[node name="Corais-Cópia7" type="Sprite" parent="."]
position = Vector2( 776.728, 255.827 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 16 )

[node name="Corais-Cópia4" type="Sprite" parent="."]
position = Vector2( 955.747, 238.018 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 16 )

[node name="Corais-Cópia5" type="Sprite" parent="."]
position = Vector2( 925.581, 393.986 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 16 )

[node name="Corais-Cópia6" type="Sprite" parent="."]
position = Vector2( 255.836, 154.273 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 16 )

[node name="JangadaLado" type="Sprite" parent="."]
position = Vector2( 554.857, 134.591 )
texture = ExtResource( 11 )

[node name="JangadaLado2" type="Sprite" parent="."]
position = Vector2( 35.6189, 359.065 )
scale = Vector2( 4.07895, 3.59351 )
texture = ExtResource( 11 )

[node name="coletavel1" type="Area2D" parent="."]
position = Vector2( 262.884, 109.28 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel1"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel1"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel2" type="Area2D" parent="."]
position = Vector2( 261.947, 50.279 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel2"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel2"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel3" type="Area2D" parent="."]
position = Vector2( 193.611, 365.206 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel3"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel3"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel4" type="Area2D" parent="."]
position = Vector2( 966.745, 240.03 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel4"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel4"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel5" type="Area2D" parent="."]
position = Vector2( 710.953, 44.7572 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel5"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel5"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel6" type="Area2D" parent="."]
position = Vector2( 642.953, 44.6847 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel6"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel6"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel7" type="Area2D" parent="."]
position = Vector2( 829.747, 237.884 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel7"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel7"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel8" type="Area2D" parent="."]
position = Vector2( 901.746, 238.96 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel8"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel8"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel9" type="Area2D" parent="."]
position = Vector2( 713.882, 110.76 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel9"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel9"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="coletavel10" type="Area2D" parent="."]
position = Vector2( 391.748, 236.417 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="AnimatedSprite" parent="coletavel10"]
position = Vector2( 28.8571, 9.25 )
scale = Vector2( 1.41428, 1.36667 )
frames = SubResource( 82 )
animation = "SalGema"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel10"]
position = Vector2( 25.7144, 10.5952 )
shape = SubResource( 83 )

[node name="Rochapng" type="Sprite" parent="."]
position = Vector2( 338.655, 324.361 )
texture = ExtResource( 21 )

[node name="Rochapng2" type="Sprite" parent="."]
position = Vector2( 527.537, 434.562 )
texture = ExtResource( 21 )

[node name="Rochapng3" type="Sprite" parent="."]
position = Vector2( 211.859, 132.226 )
texture = ExtResource( 21 )

[node name="Rochapng4" type="Sprite" parent="."]
position = Vector2( 978.79, 198.042 )
texture = ExtResource( 21 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 7.98402
margin_top = 15.0085
margin_right = 116.984
margin_bottom = 55.0085
color = Color( 0, 0, 0, 0 )

[node name="SalGemaMov" type="AnimatedSprite" parent="ColorRect2"]
position = Vector2( 24.9563, 41.0266 )
frames = SubResource( 85 )
animation = "SalGema"

[node name="pontos" type="Label" parent="ColorRect2"]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
margin_left = 56.0
margin_top = 11.0
margin_right = 110.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 86 )
text = ":"

[node name="touchEsquerda" type="TouchScreenButton" parent="."]
position = Vector2( 142.455, 512.152 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 8 )

[node name="pontoSom2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="somCena" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -15.0
autoplay = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 128.822, 167.126 )
scale = Vector2( 1, 1 )
shape = SubResource( 88 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 128.547, 192.126 )
scale = Vector2( 1, 1 )
shape = SubResource( 89 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 62.8061, 179.568 )
scale = Vector2( 1, 1 )
shape = SubResource( 90 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 297.758, 190.319 )
scale = Vector2( 1, 1 )
shape = SubResource( 91 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 263.9, 94.2811 )
scale = Vector2( 1, 1 )
shape = SubResource( 92 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 283.972, 26.3009 )
scale = Vector2( 1, 1 )
shape = SubResource( 93 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 262.162, 276.282 )
scale = Vector2( 1, 1 )
shape = SubResource( 94 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 226.122, 356.231 )
scale = Vector2( 1, 1 )
shape = SubResource( 95 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 194.096, 371.708 )
scale = Vector2( 1, 1 )
shape = SubResource( 96 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 473.581, 390.28 )
scale = Vector2( 1, 1 )
shape = SubResource( 97 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 505.616, 356.434 )
scale = Vector2( 1, 1 )
shape = SubResource( 98 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 755.656, 325.303 )
scale = Vector2( 1, 1 )
shape = SubResource( 99 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 707.444, 306.381 )
scale = Vector2( 1, 1 )
shape = SubResource( 100 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 755.854, 127.696 )
scale = Vector2( 1, 1 )
shape = SubResource( 101 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 698.858, 143.293 )
scale = Vector2( 1, 1 )
shape = SubResource( 102 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 565.847, 29.5985 )
scale = Vector2( 1, 1 )
shape = SubResource( 103 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 554.873, 65.6241 )
scale = Vector2( 1, 1 )
shape = SubResource( 104 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 383.092, 142.93 )
scale = Vector2( 1, 1 )
shape = SubResource( 105 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 545.594, 255.529 )
scale = Vector2( 1, 1 )
shape = SubResource( 106 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 563.258, 229.03 )
scale = Vector2( 1, 1 )
shape = SubResource( 107 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 419.807, 148.945 )
scale = Vector2( 1, 1 )
shape = SubResource( 108 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 912.755, 231.002 )
scale = Vector2( 1, 1 )
shape = SubResource( 109 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 913.219, 259.951 )
scale = Vector2( 1, 1 )
shape = SubResource( 110 )

[connection signal="pressed" from="touchAvancar" to="bonecoteste" method="_on_touchAvancar_pressed"]
[connection signal="pressed" from="touchDireita" to="bonecoteste" method="_on_touchDireita_pressed"]
[connection signal="pressed" from="touchIniciar" to="bonecoteste" method="_on_touchIniciar_pressed"]
[connection signal="body_entered" from="coletavel1" to="." method="_on_coletavel1_body_entered"]
[connection signal="body_entered" from="coletavel2" to="." method="_on_coletavel2_body_entered"]
[connection signal="body_entered" from="coletavel3" to="." method="_on_coletavel3_body_entered"]
[connection signal="body_entered" from="coletavel4" to="." method="_on_coletavel4_body_entered"]
[connection signal="body_entered" from="coletavel5" to="." method="_on_coletavel5_body_entered"]
[connection signal="body_entered" from="coletavel6" to="." method="_on_coletavel6_body_entered"]
[connection signal="body_entered" from="coletavel7" to="." method="_on_coletavel7_body_entered"]
[connection signal="body_entered" from="coletavel8" to="." method="_on_coletavel8_body_entered"]
[connection signal="body_entered" from="coletavel9" to="." method="_on_coletavel9_body_entered"]
[connection signal="body_entered" from="coletavel10" to="." method="_on_coletavel10_body_entered"]
[connection signal="pressed" from="touchEsquerda" to="bonecoteste" method="_on_touchEsquerda_pressed"]
